[project]
name = "resonant-chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resonant_chat"]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[project.scripts]
resonant_chat = "resonant_chat.chat:chat"
